@@ -1,2 +1,28 @@
 # Sem1_2021_CAB302_Group024_eTrade
 CAB302 Semester 1 2021 Group 024 Major Project - Electronic Trading Platform
+
+## Installations
+The project were developed using Amazon Corretto Java Development Toolkit (jdk15.0.2_7). To install, follow the instructions at https://docs.aws.amazon.com/corretto/latest/corretto-15-ug/downloads-list.html
+### A. Download This Project
+1. In IntelliJ IDEA, go to File -> New -> Project from Version Control...
+2. In this project's GitHub, click "Code" and copy the HTTPS URL (https://github.com/autumnssuns/Sem1_2021_CAB302_Group024_eTrade.git)
+3. Paste this URL into the URL field in "Get from Version Control" window in IntelliJ.
+4. Edit the "Directory" field as needed and click "Clone".
+
+_Note: Set the project SDK to SDK 15, if it has not been done so:_
+1. In the project, go to File -> Project Structure...
+2. In the project SDK field, select "15 Amazon Corretto 15.0.2".
+3. Click "OK".
+### B. Download Required External Libraries
+#### JavaFX for GUI
+1. Download the appropriate version of [JavaFX SDK](https://gluonhq.com/products/javafx/) for your operating system and unzip to a desired location.
+2. In the project, go to File -> Project Structure...
+3. Select "Libraries" tab.
+4. Click "New Project Library" ("+" button) -> Java.
+5. Point to the "lib" directory of the JavaFX SDK and add the module.
+6. From the project, go to Run -> Edit Configuration... and add a VM option:
+(Windows) --module-path "\path\to\javafx-sdk\lib" --add-modules javafx.controls,javafx.fxml
+(Linux/Mac) --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml
+Replace the path\to\javafx-sdk\lib with the appropriate location of the JavaSDK "lib" directory.
+ 
+#### SQLite3 for DB
